# NPlanarCertTriangulation

./: CMakeLists.txt  README.md
cmake/: NPlanarTrianConfig.cmake.in  NPlanarTrianConfigVersion.cmake.in  setup_installation.cmake
examples/: CMakeLists.txt  example_base.cpp
include/: NViewsCertifier.h  NViewsClass.h  NViewsTypes.h  NViewsUtils.h
src/: NViewsCertifier.cpp  NViewsClass.cpp  NViewsUtils.cpp
tests/: CMakeLists.txt  basic_params.txt  experimentsHelper.cpp  experimentsHelper.h  generic_test.cpp
utils/: generatePointCloud.cpp  generatePointCloud.h
